# conta_backend_fastapi

./: main.py  main1.py  pyproject.toml  uvicorn.txt
app/: main.py
app/connexion_cloud/: connexion_bucket.py  connexion_db.py
app/connexion_db/: connexion_bucket.py  connexion_db.py
app/cron/: cron_create_tables.py
app/endpoint_api/: endpoint_display_info_temoin.py  endpoint_get_session_web.py  endpoint_list_of_data_collected.py  endpoint_list_of_interviewer_server.py  endpoint_login_mobile.py  endpoint_login_web.py  endpoint_logout_web.py  endpoint_password_reset.py  endpoint_sign_up_web.py  endpoint_transcriptor.py  mobile_transfert_cloud.py
app/middleware/: verify_login_middleware.py
app/models/: base_model_from_mobile.py  base_model_login_mobile.py  base_model_login_web.py  base_model_sign_up_web.py
app/request_command/: request_create_table.py  transfert_cloud_from_mobile.py  verif_login_mobile.py  verif_login_web.py
app/request_command/login/: verif_login_mobile.py  verif_login_web.py
app/request_command/sign_up/: update_table_sign_up_web.py
app/request_command/transcription/: save_segmentation.py  stt_whisper.py  tts_mms.py
app/request_command/work/: files_audio_user_database.py  research_info_collected.py  table_detail_info_collected.py
